Fix for https://bugs.webkit.org/show_bug.cgi?id=51150 WebView's _scaleWebView SPI doesn't work on pages with compositing layers -and corresponding- <rdar://problem/8604713>

Reviewed by Darin Adler.

paintingGoesToWindow() should return false if the owning layer has
a transform.
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::paintingGoesToWindow):

Use docWidth() and docHeight() instead of rightLayoutOverflow() and
bottomLayoutOverflow() since docWidth/Height are now the preferred
way to query physical dimensions of the document.
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateRootLayerPosition):



Canonical link: https://commits.webkit.org/64515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74168 268f45cc-cd09-0410-ab3c-d52691b4dbfc